# langchain-agent-base

./: .env.example  .gitignore  LICENSE  QDRANT_SETUP.md  README.md  SYSTEM_CHECK.md  agent_registry.json  main.py  pyproject.toml  start_qdrant.py
docs/: README.md  adding-tools.md  advanced-usage.md  agent-memory-loop.md  api-reference.md  building-agents.md  contributing.md  examples.md  getting-started.md  memory-and-rag.md  tool-collections.md  toolbox-system.md  upgrading-agents.md
examples/: README.md  math_agent_evolution.py  protocol_usage.py  toolbox_demo.py  unified_system_demo.py
examples/building-ultimate-coding-agent/: CHANGELOG_V2.md  KNOWN_ISSUES.md  MEMORY_AND_RAG_GUIDE.md  QUICKSTART.md  README.md  V2_SUMMARY.md  cli.py  coding_agent.py
examples/building-ultimate-math-agent/: ARCHITECTURE.md  MATH_DISCOVERY_README.md  README.md  SIMPLE-EXPLANATION.md  example_calculus_tools.py  example_math_agent.py  math_discovery_agent.py  quick_start.py
guide/: Agent Usage Examples.ipynb  Using LangChain 1.0.ipynb  agent.py
src/: base.py  commands.py  discovery.py  memory.py  protocol.py  rag.py  server.py  storage.py  tool_generator.py  toolbox.py  tools.py
src/langchain_agent_base.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_building_ultimate_coding_agent.py  test_coding_agent_v2.py  test_discovery_quick.py  test_math_agent.py  test_math_discovery_agent.py  test_memory_enabled.py  test_my_prime_tool.py  test_toolbox.py  test_weierstrass_complex.py
tests/test_coding_project/: main.py
tests/test_coding_project/task_manager/: __init__.py  manager.py  storage.py  task.py
tests/test_coding_project_2/: README.md  agent_registry.json
tests/test_coding_project_2/calculator/: index.html
todo_list/: 11_30_25.md
toolbox/math/: continued_fraction_analysis.py  generate_ramanujan_formula.py  generate_ramanujan_formulas.py
