[project]
name = "langchain1-0"
version = "0.1.0"
description = "LangChain 1.0 Guide"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0.8",
    "pymupdf>=1.24.0",
    "jupyter>=1.0.0",
    "langgraph>=1.0.3",
    "langsmith>=0.4.43",
    "langchain-community>=0.4.1",
    "qdrant-client>=1.16.0",
    "langchain-qdrant>=1.1.0",
    "langchain-groq>=0.2.0",
    "groq>=0.11.0",
    "langchain-huggingface>=0.1.0",
    "beautifulsoup4>=4.14.2",
    "langgraph-cli[inmem]>=0.4.7",
    "sentence-transformers>=2.2.2",
]
